--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -29,7 +29,7 @@
         android:padding="0dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:src="@drawable/new_start"
+        android:src="@drawable/search"
         android:onClick="gotoAddActivity"/>
 
     <ImageView
