--- a/app/src/main/res/layout/image_popup.xml
+++ b/app/src/main/res/layout/image_popup.xml
@@ -5,19 +5,6 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="fill_parent"
-        android:layout_height="370px"
-        android:background="#FED345"
-        android:padding="3px"/>
-    <LinearLayout
-        android:id="@+id/lin_bottom"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="#ffccccff">
-        <Button android:id="@+id/btn_back"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="리스트로 돌아가기"/>
-    </LinearLayout>
+        android:layout_height="fill_parent"
+        android:background="#FF000000"/>
 </FrameLayout>
