--- a/app/src/main/res/layout/activity_takephoto.xml
+++ b/app/src/main/res/layout/activity_takephoto.xml
@@ -2,12 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#FF000000">
 
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal|center_vertical"/>
 
     <!-- Button
         android:id="@+id/btnCapture"
